src/kubernetes/ballerina_bridge_ingress.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    kubernetes.io/ingress.class: "nginx"
  finalizers: []
  labels:
    app: "ballerina_bridge"
  name: "ballerina-bridge-ingress"
  ownerReferences: []
spec:
  rules:
  - host: "ballerina.bridge.io"
    http:
      paths:
      - backend:
          serviceName: "ballerina-bridge-service"
          servicePort: 9090
        path: "/"
  tls:
  - hosts: []
