src/kubernetes/sidecar-ingress.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    kubernetes.io/ingress.class: "nginx"
  finalizers: []
  labels:
    app: "sidecar"
  name: "ballerina-sidecar-ingress"
  ownerReferences: []
spec:
  rules:
  - host: "ballerina.sidecar.io"
    http:
      paths:
      - backend:
          serviceName: "ballerina-sidecar-svc"
          servicePort: 9090
        path: "/"
  tls:
  - hosts: []
